# sw-docsmith

./: .gitignore  README.md  config.json  pyproject.toml
docsmith/: transform_clean.py  transform_simplify.py
input/ebook/: pg35225-images.epub
input/resume/: contacts.json  cover.json  experience.json  resume.json
src/data/: picsmith.config.json
src/docsmith/: build_resume.py
src/sw_docsmith/: build_business_card.py  build_flashcards.py  build_pamphlet.py  build_resume.py  process_image.py
src/sw_docsmith/picsmith/: black_to_colour.py  engraving.py  pull_ebook_images.py  transparentize.py  transparentize_desat.py  utils.py
src/sw_docsmith/resume_builder/: builder_html.py  builder_md.py  builder_md_pandoc.py  builder_pdf.py  builder_txt.py  resume_builder.py  resume_parser.py  utils.py  utils_md.py
src/sw_docsmith/resume_builder/util/: resume_print.css  resume_style.css  resume_web.css
