[project]
name = "sw-docsmith"
version = "0.1.0"
description = ""
authors = [
    {name = "RJ Salvador",email = "salvador.workshop@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "docsmith", from = "src"}]
package-mode = false

[tool.poetry.scripts]
transform-clean = "src.docsmith.transform_clean:transform_clean"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
