[project]
name = "sw-docsmith"
version = "0.2.0a1"
description = ""
authors = [
    {name = "RJ Salvador",email = "salvador.workshop@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "sw_docsmith", from = "src"}]
package-mode = false

[tool.poetry.scripts]
build-resume = "src.sw_docsmith.build_resume:build_resume"
build-pamphlet = "src.sw_docsmith.build_pamphlet:build_pamphlet"
build-flashcards = "src.sw_docsmith.build_flashcards:build_flashcards"
build-business-card = "src.sw_docsmith.build_business_card:build_business_card"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
